--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
 		<a href="#" class="navbar-brand text-uppercase primary-color">
 			sushi monster
 		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+		<button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#myNavbar">
 			<div class="toggler-btn">
 				<div class="bar bar-1"></div>
 				<div class="bar bar-2"></div>
