--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,8 @@ body{
 }
 
 .info h2{
-	word-spacing: 0.6rem;
+	word-spacing: 0.3rem;
+	font-size: 1.5rem;
 }
 
 .info a{
@@ -57,6 +58,7 @@ body{
 }
 
 .banner h1{
+	font-size: 3rem;
 	border-top: 6px dotted #c9c1ac;
 	border-bottom: 6px dotted #c9c1ac;
 	animation: fromLeft;
@@ -180,18 +182,6 @@ body{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 @keyframes fromBottom {
 	0%{
 		transform: translateY(-10px);
@@ -215,7 +205,7 @@ body{
 	padding: 5px 20px;
 }
 .navbar-brand{
-	font-size: 30px;
+	font-size: 25px;
 	transition: all 1s ease; 
 }
 .navbar-brand:hover{
@@ -434,31 +424,28 @@ body{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ################################## media query #####################################################*/
 @media (max-width: 576px) {
       #header{
-		min-height: calc(100vh - 160px);
+		min-height: calc(100vh - 165.6px) !important;
 	  }
 
-}
+	  .header-link{
+			bottom: 18%;
+		}
+
+	  .scrollTop{
+			bottom: 100px;
+			right: 8px;
+		}
+
+		.navbar{
+			padding: 20px 15px;
+		}
+		.navbar-brand{
+			font-size: 21px; 
+		}
+	}
+
+
+
