--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
  					<h1 class="display-1 text-capitalize w-50 mx-auto">
  						<small>Sushi</small><strong class="primary-color"> Monster</strong>
  					</h1>
- 					<a href="#" class="btn main-btn sushi-btn py-4 text-capitalize">Order online</a>
+ 					<a href="#" class="btn main-btn sushi-btn py-3 my-4 text-capitalize">Order online</a>
  				</div>
  			</div>
  		</div>
@@ -358,10 +358,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-10 mx-auto d-flex justify-content-between review-item py-3">
-							<div class="align-self-center ml-3">
+							<div class="align-self-center ml-md-5">
 								<img src="/img/customer-1.jpg" alt="" class="rounded-circle review-img">
 							</div>
-							<div class="review-text px-5">
+							<div class="review-text px-2 px-md-5">
 								<h2 class="text-capitalize mb-3 primary-color">customer's name</h2>
 								<p class="lead text-muted">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 								Eius, distinctio.</p>
@@ -377,10 +377,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-10 mx-auto d-flex justify-content-between review-item py-3">
-							<div class="align-self-center ml-3">
+							<div class="align-self-center ml-md-5">
 								<img src="/img/customer-2.jpg" alt="" class="rounded-circle review-img">
 							</div>
-							<div class="review-text px-5">
+							<div class="review-text px-2 px-md-5">
 								<h2 class="text-capitalize mb-3 primary-color">customer's name</h2>
 								<p class="lead text-muted">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 								Eius, distinctio.</p>
@@ -396,10 +396,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-10 mx-auto d-flex justify-content-between review-item py-3">
-							<div class="align-self-center ml-3">
+							<div class="align-self-center ml-md-5">
 								<img src="/img/customer-3.jpg" alt="" class="rounded-circle review-img">
 							</div>
-							<div class="review-text px-5">
+							<div class="review-text px-2 px-md-5">
 								<h2 class="text-capitalize mb-3 primary-color">customer's name</h2>
 								<p class="lead text-muted">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 								Eius, distinctio.</p>
@@ -415,10 +415,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-10 mx-auto d-flex justify-content-between review-item py-3">
-							<div class="align-self-center ml-3">
+							<div class="align-self-center ml-md-5">
 								<img src="/img/customer-4.jpg" alt="" class="rounded-circle review-img">
 							</div>
-							<div class="review-text px-5">
+							<div class="review-text px-2 px-md-5">
 								<h2 class="text-capitalize mb-3 primary-color">customer's name</h2>
 								<p class="lead text-muted">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 								Eius, distinctio.</p>
@@ -434,10 +434,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-10 mx-auto d-flex justify-content-between review-item py-3">
-							<div class="align-self-center ml-3">
+							<div class="align-self-center ml-md-5">
 								<img src="/img/customer-5.jpg" alt="" class="rounded-circle review-img">
 							</div>
-							<div class="review-text px-5">
+							<div class="review-text px-2 px-md-5">
 								<h2 class="text-capitalize mb-3 primary-color">customer's name</h2>
 								<p class="lead text-muted">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 								Eius, distinctio.</p>
@@ -468,7 +468,7 @@
 				<!-- team member -->
 				<div class="col-9 col-sm-6 col-lg-4 mx-auto my-4">
 					<div class="card">
-						<img src="/img/customer-1.jpg" alt="team member" class="card-img-top img-responsive w-100 h-100">
+						<img src="/img/customer-1.jpg" alt="team member" class="card-img-top img-responsive">
 						<div class="card-body">
 							<div class="card-title">
 								<h1 class="text-capitalize">Team member</h1>
@@ -488,7 +488,7 @@
 				<!-- team member -->
 				<div class="col-9 col-sm-6 col-lg-4 mx-auto my-4">
 					<div class="card">
-						<img src="/img/customer-2.jpg" alt="team member" class="card-img-top img-responsive">
+						<img src="/img/customer-2.jpg" alt="team member" class="card-img-top img-responsive ">
 						<div class="card-body">
 							<div class="card-title">
 								<h1 class="text-capitalize">Team member</h1>
@@ -508,7 +508,7 @@
 				<!-- team member -->
 				<div class="col-9 col-sm-6 col-lg-4 mx-auto my-4">
 					<div class="card">
-						<img src="/img/customer-4.jpg" alt="team member" class="card-img-top img-responsive w-100 h-100">
+						<img src="/img/customer-4.jpg" alt="team member" class="card-img-top img-responsive ">
 						<div class="card-body">
 							<div class="card-title">
 								<h1 class="text-capitalize">Team member</h1>
@@ -599,10 +599,16 @@
 						<a href="#" class="mr-2 primary-color"><i class="fab fa-twitter fa-2x"></i></a>
 						<a href="#" class="mr-2 primary-color"><i class="fab fa-yelp fa-2x"></i></a>
 					</div>
-					<h2 class="primary-color p-2"> &copy;copyright 2020 </h2>
+					<h2 class="primary-color p-2"> &copy; 2019<script>new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script>, Company.
+					 </h2>
+
 				</div>
 			</div>
+			<div class="row primary-color">
+			  <emp class="px-4"> Designed by OlaDan ProactiveImpact</em>
+		    </div>
 		</div>
+	
 
 		<a id="back-to-top" href="#top-icons" class="p-1"><i class="fas fa-arrow-up primary-color fa-3x"></i></a>
 <!-- footer section -->
