--- a/views/index.ejs
+++ b/views/index.ejs
@@ -330,7 +330,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 my-4">
-				<h1 class="text-uppercase display-3">About us</h1>
+				<h1 class="text-uppercase display-3 text-center">About us</h1>
 				<h2 class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 				Vero cumque fuga rerum quisquam. Ab, eaque.</h2>
 				<a href="#" class="btn main-btn my-4 text-capitalize">learn more</a>
@@ -351,6 +351,7 @@
 
 <!-- Reviews ############################ section ################################################-->
 <section id="reviews" class="py-5">
+	<h1 class="text-capitalize text-center">What customers are saying</h1>
 	<div id="slider" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 			<!-- carousel items -->
@@ -464,6 +465,7 @@
 <!--  Team section -->
 	<section id="team" class="py-5">
 		<div class="container">
+			<h1 class="text-capitalize text-center">Our Team</h1>
 			<div class="row">
 				<!-- team member -->
 				<div class="col-9 col-sm-6 col-lg-4 mx-auto my-4">
@@ -542,7 +544,7 @@
  			<div class="col-md-6 my-3 align-self-center">
  				<div class="card text-center">
  					<div class="card-header">
- 						<h1 class="text-uppercase">Contact list</h1>
+ 						<h1 class="text-uppercase">Contact us</h1>
  					</div>
  					<div class="card-body">
  						<form>
