--- a/views/index.ejs
+++ b/views/index.ejs
@@ -330,7 +330,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 my-4">
-				<h1 class="text-uppercase display-3 text-center">About us</h1>
+				<h1 class="text-uppercase display-3 ">About us</h1>
 				<h2 class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 				Vero cumque fuga rerum quisquam. Ab, eaque.</h2>
 				<a href="#" class="btn main-btn my-4 text-capitalize">learn more</a>
