--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 				<a href="#" class="mr-2 primary-color"><i class="fab fa-twitter fa-2x"></i></a>
 				<a href="#" class="mr-2 primary-color"><i class="fab fa-yelp fa-2x"></i></a>
 			</div>
-			<h2 class="primary-color p-2 text-capitalize">8325 lincoln blvd , los angelis , ca 90040</h2>
+			<h2 class="primary-color p-2 text-capitalize">N0 22, Farayola Layout, Old Estate, Abuja</h2>
 		</div>
 	</div>
 </div>
